removes bug where colliding with boss with knife kills player